[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/bg3.png" type="Texture" id=1]
[ext_resource path="res://NEAT_usability/fonts/Data/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://scenes/Game.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/player.svg" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://NEAT_usability/fonts/Data/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://NEAT_usability/fonts/Data/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 5
emission_ring_radius = 1000.0
emission_ring_inner_radius = 495.05
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.05
scale_random = 0.1
color = Color( 1, 1, 1, 0.0235294 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
game_scene = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 893.0
margin_bottom = 418.0
texture = ExtResource( 1 )

[node name="Overlay" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Buttons" type="Panel" parent="Overlay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="Grid" type="VBoxContainer" parent="Overlay/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -128.5
margin_right = 203.0
margin_bottom = 128.5
custom_constants/separation = 10

[node name="StartBtn" type="Button" parent="Overlay/Buttons/Grid"]
margin_right = 406.0
margin_bottom = 77.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "New Simulation"

[node name="LoadBtn" type="Button" parent="Overlay/Buttons/Grid"]
margin_top = 87.0
margin_right = 406.0
margin_bottom = 164.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Load Network"

[node name="ExitBtn" type="Button" parent="Overlay/Buttons/Grid"]
margin_top = 174.0
margin_right = 406.0
margin_bottom = 251.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Exit"

[node name="VBoxContainer" type="HBoxContainer" parent="Overlay/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -236.0
margin_right = 129.5
margin_bottom = -160.0

[node name="Title" type="Label" parent="Overlay/Buttons/VBoxContainer"]
margin_right = 186.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.25098, 1, 0.47451, 0.862745 )
custom_fonts/font = SubResource( 5 )
text = "Bacter"
align = 1
valign = 1

[node name="Title2" type="Label" parent="Overlay/Buttons/VBoxContainer"]
margin_left = 190.0
margin_right = 249.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0.25098, 1, 0.929412, 0.862745 )
custom_fonts/font = SubResource( 5 )
text = "AI"
align = 1
valign = 1

[node name="LoadMenu" type="Panel" parent="Overlay/Buttons"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -138.0
margin_right = 283.5
margin_bottom = 236.0
custom_styles/panel = SubResource( 6 )

[node name="ItemList" type="ItemList" parent="Overlay/Buttons/LoadMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -118.0
margin_right = 161.0
margin_bottom = 82.0
theme = ExtResource( 3 )

[node name="BackBtn" type="Button" parent="Overlay/Buttons/LoadMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -77.0
margin_right = 75.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Back"

[node name="Label" type="Label" parent="Overlay/Buttons/LoadMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_right = 98.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 9 )
text = "Load Network"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 992, 451 )
amount = 150
lifetime = 600.0
explosiveness = 1.0
process_material = SubResource( 11 )
texture = ExtResource( 6 )

[connection signal="button_down" from="Overlay/Buttons/Grid/StartBtn" to="." method="_on_StartBtn_button_down"]
[connection signal="button_down" from="Overlay/Buttons/Grid/LoadBtn" to="." method="_on_LoadBtn_button_down"]
[connection signal="button_down" from="Overlay/Buttons/Grid/ExitBtn" to="." method="_on_ExitBtn_button_down"]
[connection signal="item_selected" from="Overlay/Buttons/LoadMenu/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_down" from="Overlay/Buttons/LoadMenu/BackBtn" to="." method="_on_BackBtn_button_down"]
